# MLM

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  entrypoint.sh  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml  sccache-wrapper.sh
.github/workflows/: docs.yml  windows-publish.yml
assets/: index.js  style.css
docs/: book.toml
docs/src/: SUMMARY.md  audiobookshelf.md  autograbbers.md  basic.md  configuration.md  docker.md  full.md  goodreads.md  installation.md  introduction.md  library_organizer.md  qbittorrent.md  search.md  search_filters.md  tagging.md  windows.md
mlm_core/: Cargo.toml
mlm_core/src/: audiobookshelf.rs  autograbber.rs  cleaner.rs  config.rs  config_impl.rs  context.rs  exporter.rs  lib.rs  logging.rs  metadata_refresh.rs  qbittorrent.rs  runner.rs  snatchlist.rs  stats.rs  torrent_downloader.rs
mlm_core/src/linker/: duplicates.rs  folder.rs  libation_cats.rs  mod.rs  torrent.rs
mlm_core/src/lists/: goodreads.rs  mod.rs  notion.rs
mlm_core/src/metadata/: mam_meta.rs  mod.rs
mlm_db/: Cargo.toml
mlm_db/src/: impls.rs  lib.rs  v03.rs  v04.rs  v05.rs  v06.rs  v08.rs  v09.rs  v10.rs  v11.rs  v13.rs  v15.rs  v16.rs  v17.rs  v18.rs
mlm_db/src/impls/: categories.rs  flags.rs  language.rs  lists.rs  meta.rs  old_categories.rs  series.rs  size.rs
mlm_db/tests/: meta_diff.rs
mlm_mam/: Cargo.toml
mlm_mam/src/: api.rs  enums.rs  meta.rs  search.rs  serde.rs  user_torrent.rs
mlm_meta/: Cargo.toml  README.md
mlm_meta/src/: helpers.rs  http.rs  lib.rs  tag_category_map.rs  traits.rs
mlm_meta/src/providers/: fake.rs  hardcover.rs  mam.rs  mod.rs  openlibrary.rs  romanceio.rs
mlm_meta/tests/: hardcover_tests.rs  mock_fetcher.rs  mock_openlibrary.rs  openlibrary_tests.rs  parse_book_html.rs  provider_tests.rs  romanceio_tests.rs  scoring_tests.rs
mlm_parse/: Cargo.toml
mlm_parse/src/: html.rs  lib.rs
mlm_parse/tests/: parse_tests.rs
mlm_web_api/: Cargo.toml
mlm_web_api/src/: download.rs  error.rs  lib.rs  search.rs  torrent.rs
mlm_web_askama/: Cargo.toml  build.rs
mlm_web_askama/src/: lib.rs
mlm_web_askama/src/api/: search.rs  torrent.rs
mlm_web_askama/src/pages/: config.rs  duplicate.rs  errors.rs  events.rs  index.rs  list.rs  lists.rs  replaced.rs  search.rs  selected.rs  torrent.rs  torrent_edit.rs  torrents.rs
mlm_web_askama/templates/: base.html
mlm_web_askama/templates/pages/: duplicate.html  errors.html  events.html  list.html  lists.html  replaced.html  torrent.html  torrent_mam.html  torrents.html
mlm_web_askama/templates/partials/: flag_icons.html  mam_torrents.html
mlm_web_dioxus/: .manifest.json  Cargo.toml  Dioxus.toml  assets
mlm_web_dioxus/assets/: index.js  style.css
mlm_web_dioxus/assets/dioxus/: mlm_web_dioxus-dxh20ad320678f6d9f.js  mlm_web_dioxus_bg-dxhd27fe99611983c40.wasm
mlm_web_dioxus/public/: index.html
mlm_web_dioxus/src/: app.rs  config.rs  dto.rs  duplicate.rs  error.rs  errors.rs  events.rs  home.rs  lib.rs  list.rs  lists.rs  main.rs  replaced.rs  search.rs  selected.rs  sse.rs  ssr.rs  stats.rs  torrent_detail.rs  torrent_edit.rs  torrents.rs  utils.rs
mlm_web_dioxus/src/components/: action_button.rs  details.rs  download_buttons.rs  filter_controls.rs  filter_link.rs  icons.rs  mod.rs  pagination.rs  query_params.rs  search_row.rs  selection.rs  sort_header.rs  status_message.rs  table_view.rs  task_box.rs  torrent_flags.rs
mlm_web_dioxus/src/duplicate/: components.rs  mod.rs  server_fns.rs  types.rs
mlm_web_dioxus/src/errors/: components.rs  mod.rs  server_fns.rs  types.rs
mlm_web_dioxus/src/events/: components.rs  mod.rs  server_fns.rs  types.rs
mlm_web_dioxus/src/replaced/: components.rs  mod.rs  server_fns.rs  types.rs
mlm_web_dioxus/src/selected/: components.rs  mod.rs  query.rs  server_fns.rs  types.rs
mlm_web_dioxus/src/torrent_detail/: components.rs  mod.rs  server_fns.rs  types.rs
mlm_web_dioxus/src/torrents/: components.rs  mod.rs  query.rs  server_fns.rs  types.rs
server/: Cargo.toml  build.rs  tray.rc  tsconfig.json
server/assets/: elements.js  style.css
server/src/: audiobookshelf.rs  autograbber.rs  cleaner.rs  config.rs  config_impl.rs  goodreads.rs  lib.rs  linker.rs  main.rs  qbittorrent.rs  snatchlist.rs  stats.rs  torrent_downloader.rs
server/src/linker/: common.rs  duplicates.rs  folder.rs  mod.rs  torrent.rs
server/src/lists/: goodreads.rs  mod.rs  notion.rs
server/src/mam/: api.rs  enums.rs  meta.rs  mod.rs  search.rs  user_data.rs  user_torrent.rs
server/src/metadata/: mam_meta.rs  mod.rs
server/src/web/: mod.rs  tables.rs
server/src/web/api/: mod.rs  search.rs  torrent.rs  torrents.rs
server/src/web/pages/: config.rs  duplicate.rs  errors.rs  events.rs  index.rs  list.rs  lists.rs  replaced.rs  search.rs  selected.rs  torrent.rs  torrent_edit.rs  torrent_goodreads.rs  torrents.rs
server/src/windows/: error_window.rs  mod.rs  tray.rs
server/templates/: base.html
server/templates/pages/: config.html  duplicate.html  errors.html  events.html  index.html  list.html  search.html  selected.html  torrent.html  torrent_edit.html  torrent_mam.html  torrents.html
server/templates/partials/: cost_icon.html  filter.html  mam_torrents.html
server/tests/: cleaner_test.rs  config_impl.rs  dioxus_tests.rs  linker_folder_test.rs  linker_test.rs  linker_torrent_test.rs  metadata_integration.rs
server/tests/common/: mod.rs
src/: audiobookshelf.rs  autograbber.rs  cleaner.rs  config.rs  config_impl.rs  data.rs  data_impl.rs  exporter.rs  goodreads.rs  linker.rs  logging.rs  main.rs  mam.rs  mam_enums.rs  qbittorrent.rs  snatchlist.rs  stats.rs  tray.rs
src/data/: impls.rs  mod.rs  v01.rs  v02.rs  v03.rs  v05.rs  v06.rs  v07.rs  v08.rs  v09.rs  v1.rs  v10.rs  v11.rs  v12.rs  v13.rs  v14.rs  v15.rs  v16.rs  v17.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  v9.rs
src/mam/: api.rs  enums.rs  meta.rs  mod.rs  search.rs  serde.rs  user_data.rs  user_torrent.rs
src/web/: mod.rs  tables.rs
templates/: base.html
test/: e2e-config.toml
(+45 files in other folders)
