[package]
name = "mlm_db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
itertools = "0.14.0"
# native_db = "0.8.2"
native_db = { git = "https://github.com/StirlingMouse/native_db.git", branch = "0.8.x" }
native_model = "0.4.20"
matchr = "0.2.5"
mlm_parse = { path = "../mlm_parse" }
nom = "8.0.0"
once_cell = "1.21.3"
regex = "1.12.2"
serde = "1.0.136"
serde_derive = "1.0.136"
time = { version = "0.3.41", features = [
  "formatting",
  "local-offset",
  "macros",
  "serde",
] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
