[package]
name = "mlm_meta"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
serde_json = "1.0"
scraper = "0.14"
mlm_db = { path = "../mlm_db", default-features = false }
mlm_parse = { path = "../mlm_parse" }
strsim = "0.11"
tracing = "0.1"
urlencoding = "2.1"
url = "2.4"

[dev-dependencies]
httpmock = "0.7"
