[package]
name = "mlm_web_askama"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = { version = "0.14.0", features = ["code-in-doc", "serde_json"] }
axum = { version = "0.8.4", features = ["query", "macros"] }
axum-extra = { version = "0.10.1", features = ["form"] }
futures = "0.3"
itertools = "0.14.0"
mlm_core = { path = "../mlm_core" }
mlm_db = { path = "../mlm_db" }
mlm_mam = { path = "../mlm_mam" }
mlm_parse = { path = "../mlm_parse" }
native_db = { git = "https://github.com/StirlingMouse/native_db.git", branch = "0.8.x" }
once_cell = "1.21.3"
qbit = { git = "https://github.com/StirlingMouse/qbittorrent-webui-api.git" }
regex = "1.12.2"
reqwest = "0.12.20"
serde = "1.0.136"
serde_json = "1.0.140"
sublime_fuzzy = "0.7.0"
thiserror = "2.0.17"
time = { version = "0.3.41", features = [
  "formatting",
  "local-offset",
  "macros",
  "serde",
] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
toml = "0.8.23"
tracing = "0.1"
urlencoding = "2.1.3"
