[package]
name = "mlm"
version = "0.4.5"
edition = "2024"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Myanonamouse Library Manager"
identifier = "io.github.stirlingmouse.mlm"
resources = ["Cargo.toml", "src", "assets"]
icons = ["assets/favicon.png"]
nsis = { installer-icon = "assets/tray.ico" }

[dependencies]
anyhow = "1.0.100"
askama = { version = "0.14.0", features = ["code-in-doc", "serde_json"] }
axum = { version = "0.8.4", features = ["query", "macros"] }
axum-extra = { version = "0.10.1", features = ["form"] }
bytes = "1.10.1"
cookie = "0.18.1"
dirs = "6.0"
figment = { version = "0.10", features = ["toml", "env"] }
file-id = "0.2.2"
futures = "0.3"
# goodreads-metadata-scraper = "0.2.4"
# goodreads-metadata-scraper = { path = "../goodreads-metadata-scraper" }
htmlentity = "1.3.2"
itertools = "0.14.0"
lava_torrent = "0.11.1"
log = "0.4.27"
matchr = "0.2.5"
mlm_db = { path = "../mlm_db" }
mlm_parse = { path = "../mlm_parse" }
native_db = { git = "https://github.com/StirlingMouse/native_db.git", branch = "0.8.x" }
native_model = "0.4.20"
once_cell = "1.21.3"
openssl = { version = "0.10.73", features = ["vendored"] }
# qbit = "=0.2.0"
qbit = { git = "https://github.com/StirlingMouse/qbittorrent-webui-api.git" }
# qbit = { path = "../qbittorrent-webui-api" }
quick-xml = { version = "0.38.0", features = ["serialize"] }
regex = "1.12.2"
reqwest = "0.12.20"
reqwest_cookie_store = "0.8.0"
sanitize-filename = { git = "https://github.com/StirlingMouse/sanitize-filename.git" }
scraper = "0.23.1"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.140"
serde-nested-json = "0.1.3"
sublime_fuzzy = "0.7.0"
thiserror = "2.0.12"
time = { version = "0.3.41", features = [
  "formatting",
  "local-offset",
  "macros",
  "serde",
] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7"
toml = "0.8.23"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = [
  "local-time",
  "env-filter",
  "tracing-log",
] }
tracing-panic = "0.1.2"
unidecode = "0.3.0"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
open = "5.3.2"
tray-item = "0.10.0"
winsafe = { version = "0.0.26", features = ["gui"] }

[build-dependencies]
embed-resource = "3.0.5"
