[package]
name = "mlm"
version = "0.4.6"
edition = "2024"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Myanonamouse Library Manager"
identifier = "io.github.stirlingmouse.mlm"
resources = ["Cargo.toml", "src"]
icons = ["assets/favicon.png"]
nsis = { installer-icon = "assets/tray.ico" }

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["query", "macros"] }
dirs = "6.0"
figment = { version = "0.10", features = ["toml", "env"] }
mlm_core = { path = "../mlm_core" }
mlm_db = { path = "../mlm_db" }
mlm_mam = { path = "../mlm_mam" }
mlm_web_askama = { path = "../mlm_web_askama" }
mlm_web_dioxus = { path = "../mlm_web_dioxus", features = ["server"] }
native_db = { git = "https://github.com/StirlingMouse/native_db.git", branch = "0.8.x" }
once_cell = "1.21.3"
qbit = { git = "https://github.com/StirlingMouse/qbittorrent-webui-api.git" }
serde = "1.0.136"
time = { version = "0.3.41", features = [
  "formatting",
  "local-offset",
  "macros",
  "serde",
] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = [
  "local-time",
  "env-filter",
  "tracing-log",
] }
tracing-panic = "0.1.2"

[target.'cfg(windows)'.dependencies]
open = "5.3.2"
tray-item = "0.10.0"
winsafe = { version = "0.0.26", features = ["gui"] }

[build-dependencies]
embed-resource = "3.0.5"

[dev-dependencies]
tempfile = "3.24.0"
async-trait = "0.1"
url = "2.4"
serde_json = "1.0"
mlm_parse = { path = "../mlm_parse" }
mlm_meta = { path = "../mlm_meta" }
